--- a/index.html
+++ b/index.html
@@ -211,6 +211,13 @@
 			<div class="layer">
 		<p class="medtxt topleft"> Selected Work</p>
 					</div>
+			
+			<div class="links">
+				<a href="https://player.vimeo.com/video/673355639" target="_blank" rel="noopener noreferrer"> <div class="links-year">2021</div>David Zwirner: Podcast  — Motion Graphics <span><img src="assets/hover/2021_dz.jpg" alt="image" height="300" /></span></a>
+			</div>
+				<div class="links">
+				<a href="https://player.vimeo.com/video/673355951" target="_blank" rel="noopener noreferrer"> <div class="links-year">2021</div>Bonobos: Fall 2021  — Post (click to see WTC install) <span><img src="assets/hover/2021_bonobos.jpg" alt="image" height="300" /></span></a>
+			</div>
 			<div class="links">
 				<a href="https://player.vimeo.com/video/488689223" target="_blank" rel="noopener noreferrer"> <div class="links-year">2020</div>Glossier: Skywash  — Direction/DP/Post <span><img src="assets/hover/2020_glossier_skywash.jpg" alt="image" height="300" /></span></a>
 			</div>
