--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		</div>
 	<div class="sections" id="what">
 		<div class="layer poster">
-			<p class="bigtxt"> From concept to final, we help create film and video projects — specializing in a range of post services </p>
+			<p class="bigtxt"> From concept to final, we help create film and video projects — specializing in a range of creative and post services </p>
 		</div>
 	</div>
 
@@ -202,7 +202,7 @@
 		<div class="sections" id="about">
 			<div class="layer">
 				<div id="bio">
-			<p> Founded in 2016 by filmmaker Wilson Cameron, Placement is a post-production studio with a focus on collaborative, creative process. We love to work with clients to help them tell their stories — from new brands that have never worked in video, to companies that have done it all and need reliable, skillful delivery of assets.  We believe in applying fundamental filmmaking principles to all of the work that we do, whether a product video, documentary, or a narrative piece. We are currently booking edit, color, and motion graphics projects. Get in touch and let’s make something fun. ✌️  </p>
+			<p> Founded in 2016 by filmmaker Wilson Cameron, Placement is a post-production studio with a focus on collaborative, creative process. We love to work with clients to help them tell their stories — from new brands that have never worked in video, to companies that have done it all and need reliable, skillful delivery of assets.  We believe in applying fundamental filmmaking principles to all of the work that we do, whether a product video, documentary, or a narrative piece. We are currently booking shoot, edit, color, and motion graphics projects. Get in touch and let’s make something fun. ✌️  </p>
 			</div>
 				</div>
 		</div>
