--- a/index.html
+++ b/index.html
@@ -213,6 +213,19 @@
 					</div>
 			
 				<div class="links">
+				<a href="https://player.vimeo.com/video/790905196?h=f54880de37" target="_blank" rel="noopener noreferrer"> <div class="links-year">2022</div>Glossier: Gen G Punch — Director & Post <span><img src="assets/hover/2022_GGP.jpg" alt="image" height="300" /></span></a>
+			</div>
+				<div class="links">
+				<a href="https://player.vimeo.com/video/790905731?h=c1e4d7d031" target="_blank" rel="noopener noreferrer"> <div class="links-year">2022</div>AF94 — Director & Post <span><img src="assets/hover/2022_AF.jpg" alt="image" height="300" /></span></a>
+			</div>
+					<div class="links">
+				<a href="https://player.vimeo.com/video/790905447?h=583460389b" target="_blank" rel="noopener noreferrer"> <div class="links-year">2022</div>Glossier: Lash Slick — Director & Post <span><img src="assets/hover/2022_GLL.jpg" alt="image" height="300" /></span></a>
+			</div>
+						<div class="links">
+				<a href="https://player.vimeo.com/video/790911238?h=bd6c9ad595" target="_blank" rel="noopener noreferrer"> <div class="links-year">2022</div>W MAGAZINE: Screen Tests 2022 (various) — Post <span><img src="assets/hover/2022_WMAG.jpg" alt="image" height="300" /></span></a>
+			</div>
+			
+				<div class="links">
 				<a href="https://www.foxyproduction.com/exhibitions/1751" target="_blank" rel="noopener noreferrer"> <div class="links-year">2021</div>Sara Cwynar: Glass Life  — Color & VFX <span><img src="assets/hover/2021_GL.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
