--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 			</div>
 			
 				<div class="links">
-				<a href="https://www.foxyproduction.com/exhibitions/1751" target="_blank" rel="noopener noreferrer"> <div class="links-year">2021</div>Sara Cwynar: Glass Life  — Color & VFX <span><img src="assets/hover/2021_GL.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/594784549?h=af9b20775d" target="_blank" rel="noopener noreferrer"> <div class="links-year">2021</div>Sara Cwynar: Glass Life  — Color & VFX (click for trailer) <span><img src="assets/hover/2021_GL.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
 				<a href="https://player.vimeo.com/video/673355639" target="_blank" rel="noopener noreferrer"> <div class="links-year">2021</div>David Zwirner: Podcast  — Motion Graphics <span><img src="assets/hover/2021_DZ.jpg" alt="image" height="300" /></span></a>
