--- a/index.html
+++ b/index.html
@@ -138,33 +138,33 @@
 							<div class="movie">
 								<iframe src="https://player.vimeo.com/video/341696998?background=1"  frameborder="0" width="100%" height="200px"></iframe>
 							</div>
-						<p> Campaign films</p>
+						<p> Glossier — Colorslide </p>
 
 					</li>
 					<li class="top-align">
 											<div>	<img src="assets/img/s5/s5_basel.jpg"> </div>
 						<!--		<iframe src="https://player.vimeo.com/video/488689676?background=1"  frameborder="0" width="100%" height="200px"></iframe> -->
-						<p class="slidedescript"> Short-Form Documentary</p>
+						<p class="slidedescript"> Art Basel — Meet The Collectors (short form series)</p>
 					</li>
 
 					<li class="bottom-align">
 						<div class="movie">
 							<iframe class="sixteen-nine" src="https://player.vimeo.com/video/488689709?background=1"  frameborder="0" width="100%" height="200px"></iframe>
 						</div>
-						<p class="slidedescript"> Product Films </p>
+						<p class="slidedescript"> Everlane — 10 Questions (Campaign) </p>
 					</li>
 
 					<li class="top-align">
 								<div>	<img src="assets/img/s5/s5_uniqlo.jpg"> </div>
 			<!--		<iframe src="https://player.vimeo.com/video/488689733?background=1"  frameborder="0" width="100%" height="200px"></iframe> -->
-						<p class="slidedescript"> Social Campaigns  </p>
+						<p class="slidedescript"> Uniqlo x Disney — Artist Series  </p>
 					</li>
 
 					<li class="bottom-align">
 						<div class="movie">
 							<iframe class="sixteen-nine" src="https://player.vimeo.com/video/488689737?background=1"  frameborder="0" width="100%" height="200px"></iframe>
 						</div>
-						<p class="slidedescript"> Editorial Content </p>
+						<p class="slidedescript"> W Magazine — Various Series (Post Production)  </p>
 					</li>
 				</ul>
 				</div>
