--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 				<div class="studio">
 					<div class="studio1">
-						<p>Creative and Post services for film & video.</p>
+						<p>Creative Post-Production services for film & video.</p>
 					</div>
 					<div class="studio2">
 						<p>hi@placement.studio Based in NYC. </p>
@@ -69,7 +69,7 @@
 		</div>
 	<div class="sections" id="what">
 		<div class="layer poster">
-			<p class="bigtxt"> From concept to final, we help create film and video projects — specializing in a range of creative and post services </p>
+			<p class="bigtxt"> From concept to final, we help create film and video projects — specializing in a range of post-production services </p>
 		</div>
 	</div>
 
@@ -125,7 +125,7 @@
 
 		<div class="sections" id="collaborate">
 			<div class="layer poster">
-				<p class="bigtxt"> We collaborate with brands, in-house creative, agencies, and production companies to help realize projects from pre-production to delivery.</p>
+				<p class="bigtxt"> We collaborate with brands, in-house creative, agencies, and production companies to help deliver everything from social assets to campaign films.</p>
 			</div>
 		</div>
 
@@ -202,7 +202,7 @@
 		<div class="sections" id="about">
 			<div class="layer">
 				<div id="bio">
-			<p> Founded in 2016 by filmmaker Wilson Cameron, Placement is a creative and post company for film and video, with a focus on collaborative process. We love to work with clients to help them tell their stories — from new brands that have never worked in video, to companies that have done it all and need reliable, skillful delivery of assets.  We believe in applying fundamental filmmaking principles to all of the work that we do, whether a digital campaign, product page video, documentary, or a narrative piece. We are currently booking shoot, edit, color, and motion graphics projects. Get in touch and let’s make something fun. ✌️   </p>
+			<p> Founded in 2016 by filmmaker Wilson Cameron, Placement is a post-production company for film and video, with a focus on collaborative process. We love to work with clients to help them tell their stories — from new brands that have never worked in video, to companies that have done it all and need reliable, skillful delivery of assets.  We believe in applying fundamental filmmaking principles to all of the work that we do, whether a digital campaign, product page video, documentary, or a narrative piece. Get in touch and let’s make something fun. ✌️   </p>
 			</div>
 				</div>
 		</div>
