--- a/index.html
+++ b/index.html
@@ -211,7 +211,13 @@
 			<div class="layer">
 		<p class="medtxt topleft"> Selected Work</p>
 					</div>
-			
+			<div class="links">
+				<a href="https://player.vimeo.com/video/790905447?h=583460389b" target="_blank" rel="noopener noreferrer"> <div class="links-year">2022</div>Glossier: Lash Slick Brown — Director & Post <span><img src="assets/hover/2022_GLS.jpg" alt="image" height="300" /></span></a>
+			</div>
+
+			<div class="links">
+				<a href="https://player.vimeo.com/video/790905731?h=c1e4d7d031" target="_blank" rel="noopener noreferrer"> <div class="links-year">2022</div>AF94 — Director & Post <span><img src="assets/hover/2022_AF94.jpg" alt="image" height="300" /></span></a>
+			</div>
 				<div class="links">
 				<a href="https://player.vimeo.com/video/790905196?h=f54880de37" target="_blank" rel="noopener noreferrer"> <div class="links-year">2022</div>Glossier: Gen G Punch — Director & Post <span><img src="assets/hover/2022_GGP.jpg" alt="image" height="300" /></span></a>
 			</div>
