--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 					</div>
 
 				<div class="links">
-				<a href="https://www.instagram.com/p/Cwj1Bczvccl/" target="_blank" rel="noopener noreferrer"> <div class="links-year">2023</div>Hermes x Sara Cwynar - Edit & Effects (reel to come) <span><img src="assets/hover/2023_HSC.jpg" alt="image" height="300" /></span></a>
+				<a href="https://www.instagram.com/p/Cwj1Bczvccl/" target="_blank" rel="noopener noreferrer"> <div class="links-year">2023</div>Hermes x Sara Cwynar — Edit & Effects (reel to come) <span><img src="assets/hover/2023_HSC.jpg" alt="image" height="300" /></span></a>
 			</div>
 				<div class="links">
 				<a href="https://player.vimeo.com/video/790905196?h=f54880de37" target="_blank" rel="noopener noreferrer"> <div class="links-year">2022</div>Glossier: Gen G Punch — Director & Post <span><img src="assets/hover/2022_GGP.jpg" alt="image" height="300" /></span></a>
