--- a/index.html
+++ b/index.html
@@ -211,7 +211,10 @@
 			<div class="layer">
 		<p class="medtxt topleft"> Selected Work</p>
 					</div>
-
+	<div class="links">
+				<a href="https://player.vimeo.com/video/871127447?h=25631544d2" target="_blank" rel="noopener noreferrer"> <div class="links-year">2023</div>Glossier: Ultralip — Director & Post <span><img src="assets/hover/2023_GUL.jpg" alt="image" height="300" /></span></a>
+			</div>
+			
 				<div class="links">
 				<a href="https://www.instagram.com/p/Cwj1Bczvccl/" target="_blank" rel="noopener noreferrer"> <div class="links-year">2023</div>Hermes x Sara Cwynar — Edit & Effects (reel to come) <span><img src="assets/hover/2023_HSC.jpg" alt="image" height="300" /></span></a>
 			</div>
@@ -285,15 +288,11 @@
 			<div class="links">
 				<a href="https://player.vimeo.com/video/297834836" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Glossier: Zit Stick — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/g_zs.jpg" alt="image" height="300" /></span></a>
 			</div>
-			<div class="links">
-				<a href="https://player.vimeo.com/video/249100765" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Levis x Google: Jeff Staple — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/l_js.jpg" alt="image" height="300" /></span></a>
-			</div>
+		
 			<div class="links">
 				<a href="https://player.vimeo.com/video/259055815" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Warner Music: Level — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/wb_l.jpg" alt="image" height="300" /></span></a>
 			</div>
-			<div class="links">
-				<a href="https://player.vimeo.com/video/217500586" target="_blank" rel="noopener noreferrer"> <div class="links-year">2017</div>Theory: Transformer Bag — Direction/DP/Post  <span class="bottomlinks"><img src="assets/hover/t_t.jpg" alt="image" height="300" /></span></a>
-			</div>
+			
 			<div class="links">
 				<a href="https://player.vimeo.com/video/211300166" target="_blank" rel="noopener noreferrer"> <div class="links-year">2017</div>The Standard x Art News: Eric Mack — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/sh_em.jpg" alt="image" height="300" /></span></a>
 			</div>
