--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			    <li>
 						<p class="medtxt topleft"> Creative, Edit, Color Correct, Retouch, Animation, Compositing, Effects</p>
 							<div class="movie">
-								<iframe src="https://player.vimeo.com/video/943801030?h=3608ccac5b?background=1"  frameborder="0" width="100%" height="200px"></iframe>
+								<iframe src="https://player.vimeo.com/video/943801030?h=3608ccac5b"  frameborder="0" width="100%" height="200px"></iframe>
 							</div>
 						<p> Glossier You ASMR — Direction, Cinematography, Post </p>
 					</li>
@@ -93,7 +93,7 @@
 
 					<li class="bottom-align">
 							<div class="movie">
-								<iframe src="https://player.vimeo.com/video/943808793?h=e3f2429253?background=1"  frameborder="0" width="100%" height="200px"></iframe>
+								<iframe src="https://player.vimeo.com/video/943808793?h=e3f2429253"  frameborder="0" width="100%" height="200px"></iframe>
 							</div>
 						<p class="slidedescript"> Hermes x Sara Cwynar - Edit / VFX </p>
 					</li>
