--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 
 					<li class="top-align">
 							<div class="movie">
-								<iframe class="nine-sixteen" src ="https://player.vimeo.com/video/501922654?background=1"  frameborder="0" width="100%" height="200px"></iframe>
+								<iframe class="nine-sixteen" src ="https://player.vimeo.com/video/674969497&background=1"  frameborder="0" width="100%" height="200px"></iframe>
 							</div>
-						<p> VSCO — Post, Motion Graphics </p>
+						<p> Sara Cwynar: Glass Life — Post, Motion Graphics </p>
 					</li>
 
 					</ul>
