--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
 							<div class="movie">
 								<iframe src="https://player.vimeo.com/video/943801030?h=3608ccac5b&background=1"  frameborder="0" width="100%" height="200px"></iframe>
 							</div>
-						<p> Glossier You ASMR — Direction, Cinematography, Post </p>
+						<p> Glossier You ASMR — Edit, Color, Post </p>
 					</li>
 
 					<li class="top-align">
 						<div>	<img src="assets/img/s3/s2_everlane.jpg"> </div>
-						<p class="slidedescript"> Everlane, Various Projects — Direction, Cinematography, Post</p>
+						<p class="slidedescript"> Everlane, Various Projects — Edit, Color, Post</p>
 					</li>
 
 					<li class="bottom-align">
@@ -100,14 +100,14 @@
 
 					<li class="top-align">
 							<div>	<img src="assets/img/s3/s2_theory.jpg"> </div>
-						<p class="slidedescript"> Theory — Direction, Cinematography, Post </p>
+						<p class="slidedescript"> Theory — Edit, Color, Post </p>
 					</li>
 
 					<li class="bottom-align">
 							<div class="movie">
 								<iframe class="sixteen-nine" src="https://player.vimeo.com/video/488689649?background=1"  frameborder="0" width="100%" height="200px"></iframe>
 							</div>
-						<p class="slidedescript"> W Mag: Anna Sui — Post </p>
+						<p class="slidedescript"> W Mag: Anna Sui — Edit, Post </p>
 					</li>
 
 					<li class="top-align">
@@ -253,48 +253,48 @@
 				<a href="https://player.vimeo.com/video/500898554" target="_blank" rel="noopener noreferrer"> <div class="links-year">2020</div>W Magazine: Anna Sui — Edit/Post <span><img src="assets/hover/wmag_a.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/372225341" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>NYT: Rimowa  — DP (excerpt)  <span><img src="assets/hover/nyt_r.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/372225341" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>NYT: Rimowa  — DP and Post (excerpt)  <span><img src="assets/hover/nyt_r.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
 				<a href="https://player.vimeo.com/video/397469359" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Everlane: Caroline Ventura x Everlane denim — Direction/DP/Post <span><img src="assets/hover/e_cv.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/341428512" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Glossier: Complexion — Direction/DP <span><img src="assets/hover/g_com.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/341428512" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Glossier: Complexion — Director/DP <span><img src="assets/hover/g_com.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/325565290" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Glossier: Colorslide — Direction/DP/Post <span><img src="assets/hover/g_cs.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/325565290" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Glossier: Colorslide — Director/DP/Post <span><img src="assets/hover/g_cs.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/351062484" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Glossier: Lip Gloss — Direction/DP/Post <span><img src="assets/hover/g_lg.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/351062484" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Glossier: Lip Gloss — Director/DP/Post <span><img src="assets/hover/g_lg.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/389532896" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Art Basel: Jill Kraus — Direction/DP/Post <span><img src="assets/hover/ab_jk.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/389532896" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Art Basel: Jill Kraus — Director/DP/Post <span><img src="assets/hover/ab_jk.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/397470272" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Zit Sticka: Skin Discipline —  Direction/DP (Live action)  <span><img src="assets/hover/zs_sd.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/397470272" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Zit Sticka: Skin Discipline —  Director/DP (Live action)  <span><img src="assets/hover/zs_sd.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/334559617" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Uniqlo: Jason Polan x Marvel — Direction/DP/Post <span><img src="assets/hover/u_jp.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/334559617" target="_blank" rel="noopener noreferrer"> <div class="links-year">2019</div>Uniqlo: Jason Polan x Marvel — Director/DP/Post <span><img src="assets/hover/u_jp.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/299341712" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Art Basel: Magazzino — Direction/DP/Post <span><img src="assets/hover/ab_m.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/299341712" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Art Basel: Magazzino — Director/DP/Post <span><img src="assets/hover/ab_m.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/297827740" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Theory: 2.0 — Direction/DP/Post <span><img src="assets/hover/t_tpo.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/297827740" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Theory: 2.0 — Director/DP/Post <span><img src="assets/hover/t_tpo.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/297834914" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Theory: Holiday 2018 — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/t_h.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/297834914" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Theory: Holiday 2018 — Director/DP/Post <span class="bottomlinks"><img src="assets/hover/t_h.jpg" alt="image" height="300" /></span></a>
 			</div>
 			<div class="links">
-				<a href="https://player.vimeo.com/video/297834836" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Glossier: Zit Stick — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/g_zs.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/297834836" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Glossier: Zit Stick — Director/DP/Post <span class="bottomlinks"><img src="assets/hover/g_zs.jpg" alt="image" height="300" /></span></a>
 			</div>
 		
 			<div class="links">
-				<a href="https://player.vimeo.com/video/259055815" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Warner Music: Level — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/wb_l.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/259055815" target="_blank" rel="noopener noreferrer"> <div class="links-year">2018</div>Warner Music: Level — Director/DP/Post <span class="bottomlinks"><img src="assets/hover/wb_l.jpg" alt="image" height="300" /></span></a>
 			</div>
 			
 			<div class="links">
-				<a href="https://player.vimeo.com/video/211300166" target="_blank" rel="noopener noreferrer"> <div class="links-year">2017</div>The Standard x Art News: Eric Mack — Direction/DP/Post <span class="bottomlinks"><img src="assets/hover/sh_em.jpg" alt="image" height="300" /></span></a>
+				<a href="https://player.vimeo.com/video/211300166" target="_blank" rel="noopener noreferrer"> <div class="links-year">2017</div>The Standard x Art News: Eric Mack — Director/DP/Post <span class="bottomlinks"><img src="assets/hover/sh_em.jpg" alt="image" height="300" /></span></a>
 			</div>
 
 
